--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#ignore bin directory
+bin/
+
+#ignore build directory
+build/
+
+#ignore target directory
+target/
+target/*
+
+
+
