--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,13 @@ build/
 #ignore target directory
 target/
 target/*
+/target/**
 
 
 
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
